--- a/style.css
+++ b/style.css
@@ -63,3 +63,49 @@ li a {
     margin-left: 40px;
     margin-top: 20px;
 }
+.logos{
+    border-top:3px solid #ebebeb;
+    border-bottom: 3px solid #ebebeb;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin:80px 0px;
+}
+.sub-logo img{
+    margin:40px;
+}
+.section-header-name{
+    text-align: center;
+    margin-top: 100px;
+    font-size: 18px;
+}
+.products{
+    margin: 50px 0px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-between;
+}
+.product-box{
+    box-shadow: 1px 1px 20px 0.1px #e9e8e8;
+    border-radius: 10px;
+    padding: 20px;
+    margin:18px;
+    font-weight: bold;
+}
+.product-box img{
+    width:100%;
+}
+.box-info h1{
+    font-size: 30px;
+}
+.box-info span{
+    font-size: 24px;
+    font-weight: 500;
+}
+.star{
+    display: flex;
+    margin-top: 10px;
+}
+.box-info p{
+    color:#615f5f;
+}
